Animation chaged to AOS and Overflow correction

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,6 +1,9 @@
 body{
     /*box-sizing: border-box;*/
 }
+html{
+  overflow-x: hidden;
+}
 .land{
   background-image: url('../img/bg-01.png');
   background-position: center;
@@ -9,6 +12,7 @@ body{
   padding: 0 20px;
   display: flex;
   height: 100vh;
+  width: 100vw;
   flex-direction: column;
   align-items: center;
   justify-content: center;
